--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,205 +1,419 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
+*, *::before, *::after{
+    box-sizing: border-box; 
 }
 
-html {
-  line-height: 1.15; 
-  -webkit-text-size-adjust: 100%; 
+*{
+    margin: 0; 
+    padding: 0; 
 }
 
-body {
-  margin: 0;
-  color: #333; 
-  background-color: #fff;
+ul[role='list'], ol[role='list']{
+    list-style: none; 
 }
 
-main {
-  display: block;
+html:focus-within{
+    scroll-behavior: smooth; 
 }
 
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-  font-weight: normal;
+a:not([class]){
+    text-decoration-skip-ink: auto; 
 }
 
-ul, ol {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+img, picture, svg, video, canvas{
+    max-width: 100%;
+    height: auto; 
+    vertical-align: middle; 
+    font-style: italic; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+	object-fit: cover;
+    object-position: top;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  border-style: none;
+input, button, textarea, select{
+    font: inherit; 
 }
 
-a {
-  color: inherit; 
-  text-decoration: none; 
-  background-color: transparent;
+@media (prefers-reduced-motion: reduce){
+    html:focus-within {
+        scroll-behavior: auto;
+    }
+    *, *::before, *::after {
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+        transition: none;
+    }
 }
 
-a:hover {
-  text-decoration: underline; 
+body, html{
+    height: 100%; 
+    scroll-behavior: smooth; 
+}
+
+body{
+	display: flex;
+    flex-direction: column;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+	font-family: -apple-system, 'Roboto', system-ui, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+}
+
+.wrapper{
+	display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: space-between;
+	position:relative;
+}
+
+a{
+	text-decoration: none;
+}
+
+p{
+	margin:20px 0;
+	line-height:1.5;
+}
+
+h1{
+	margin-bottom:20px;
+	font-size:28px;
+}
+
+h2{
+	font-size:26px;
+}
+
+h3{
+	font-size:24px;
+}
+
+h4{
+	font-size:22px;
+}
+
+h5{
+	font-size:20px;
+}
+
+h6{
+	font-size:18px;
+}
+
+header{
+    /*background: #617162;*/
+    font-size: 24px;
+    font-weight: 500;
+	position:sticky;
+	top:0;
+	background:#FFF;
+	border-bottom: 1px solid #efefef;
+	z-index:9999;
+}
+footer{
+    font-weight: 500;
+}
+
+section{
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	flex-direction: column;
+}
+
+header,section,footer{
+	padding: 20px;
+}
+
+from{display:flex}
+
+.loading-block {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #ffffffcf;
+    min-height: 50vh;
+    z-index: 8888;
+    top: 0;
+    left: 0;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	
+	-webkit-animation: fadeInAnimation 1.7s;
+    -moz-animation: fadeInAnimation 1.7s;
+    -ms-animation: fadeInAnimation 1.7s;
+    -o-animation: fadeInAnimation 1.7s;
+    animation: fadeInAnimation 1.7s;
+}
+
+.loading-block:before {
+    content: '';
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #3498db;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+}
+
+.hidden{
+	display: none !important;
+    opacity: 0;
+}
+
+@supports (animation: spin 1s) {
+    .loading-block:before{
+		animation: spin 1s linear infinite;
+	}
+}
+
+@supports not (animation: spin 1s) {
+    .loading-block {
+		background-image: url(../img/loading3.gif);
+		background-repeat: no-repeat;
+		background-position: calc(50%);
+		background-attachment: fixed;
+		background-size: 50px;
+	}
+	.loading-block:before{
+		display:none;
+	}
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 
-hr {
-  box-sizing: content-box; 
-  height: 0; 
-  overflow: visible; 
+.inner-header{
+    max-width: 1920px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.inner-content-body{
+	-webkit-animation: fadeInAnimation ease 2s;
+    -moz-animation: fadeInAnimation ease 2s;
+    -ms-animation: fadeInAnimation ease 2s;
+    -o-animation: fadeInAnimation ease 2s;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+.inner-section{
+	max-width:1024px;
+	margin:0 auto;
 }
 
-pre {
-  font-family: monospace, monospace; 
-  font-size: 1em; 
+.inner-section > :last-child{
+	margin-bottom:0;
 }
 
-abbr[title] {
-  border-bottom: none; 
-  text-decoration: underline; 
-  text-decoration: underline dotted; 
+.logo{
+	display:flex;
+	background:orange;
+	z-index:2;
+	align-items:center;
 }
 
-b,
-strong {
-  font-weight: bolder;
+nav ul{
+	list-style: none;
+    display: flex;
+    gap: 35px;
+    font-size: 18px;
+    font-weight: normal;
+	align-items:center;
+}
+nav{position:relative;}
+
+nav li ul {
+    display: none;
+    border: 1px solid #e5e5e5;
+    text-align: left;
+    min-width: 100%;
+    width: max-content;
+    padding: 10px;
 }
 
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; 
-  font-size: 1em; 
+nav li ul li ul {
+    position: relative;
+    width: 100%;
+    left: 0;
+    border: none !important;
+    padding: 0;
+    margin: 10px 0;
+    top: 0;
+    box-shadow: none;
+}
+nav a{color:black;}
+
+.side-menu:checked ~ .hamburger .hamburger-line {
+    background: transparent;
+}
+.side-menu:checked ~ .hamburger .hamburger-line::before {
+    transform: rotate(-45deg);
+    top:0;
+}
+.side-menu:checked ~ .hamburger .hamburger-line::after {
+    transform: rotate(45deg);
+    top:0;
+}
+.side-menu{display:none;}
+.hamburger{
+    cursor: pointer;
+    position: relative;
+    padding: 0;
+    top: 0;
+    right: 0;
+    z-index: 999;
+    background: #f9f9f9;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 10px;
+    border-radius: 5px;
+}
+ 
+.hamburger-line {
+    background: #000;
+    display: block;
+    height: 4px;
+    position: relative;
+    width: 30px;
+    border-radius: 5px;
+ 
+}
+ 
+.hamburger-line::before,
+.hamburger-line::after{
+    background: #000;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+.hamburger-line::before{
+    top: 10px;
+}
+.hamburger-line::after{
+    top: -10px;
+}
+/*
+@media (prefers-reduced-motion: reduce) {
+    .animatable-element {
+        animation: none; 
+        transition: none;
+    }
+}
+*/
+
+
+
+.show{
+   animation-timing-function: ease-in;
+   -webkit-animation: show_info_block 4s; /* Safari 4+ infinite*/
+  -moz-animation:    show_info_block 4s; /* Fx 5+ */
+  -o-animation:      show_info_block 4s; /* Opera 12+ */
+   animation:        show_info_block 4s; /* IE 10+, Fx 29+ */
+   
 }
 
-small {
-  font-size: 80%;
+.info_block{
+    left:10px;
+    right:10px;
+    position: fixed;
+    bottom: -100px;
+    padding: 15px;
+    background: rgb(0 0 0 / 70%);
+	background: rgba(0,0,0,.70);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    opacity:0;
+    color: #00ff1f;
+    font-weight: 500;
+    z-index: 999999;
+    border-radius:5px;
+    /*transition: 3s;*/
 }
 
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+@-webkit-keyframes show_info_block {
+0%,100% { opacity: 0;bottom:-100px; }
+3%,90% { opacity: 1;bottom:10px;}
+}
+@-moz-keyframes show_info_block {
+0%,100% { opacity: 0;bottom:-100px; }
+3%,90% { opacity: 1;bottom:10px;}
+}
+@-o-keyframes show_info_block {
+0%,100% { opacity: 0;bottom:-100px; }
+3%,90% { opacity: 1;bottom:10px;}
+}
+@keyframes show_info_block {
+0%,100% { opacity: 0;bottom:-100px; }
+3%,90% { opacity: 1;bottom:10px;}
 }
 
-sub {
-  bottom: -0.25em;
+
+@keyframes fadeInAnimation  {
+    from{opacity:0;}to{opacity:1;} 
 }
 
-sup {
-  top: -0.5em;
+@-moz-keyframes fadeInAnimation { 
+	from{opacity:0;}to{opacity:1;} 
+} 
+		
+@-webkit-keyframes fadeInAnimation { 
+	from{opacity:0;}to{opacity:1;} 
+} 
+
+@-ms-keyframes fadeInAnimation { 
+	from{opacity:0;}to{opacity:1;} 
+} 
+@-o-keyframes fadeInAnimation { 
+	from{opacity:0;}to{opacity:1;}
 }
 
 
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; 
-  font-size: 100%; 
-  line-height: 1.15; 
-  margin: 0; 
+@supports (--a: 0){
+  /* если есть поддержка переменных CSS */
+  /* тут стили цветов */
 }
 
-button,
-input { 
-  overflow: visible;
-}
-
-button,
-select { 
-  text-transform: none;
-}
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-legend {
-  box-sizing: border-box; 
-  color: inherit; 
-  display: table; 
-  max-width: 100%; 
-  padding: 0; 
-  white-space: normal; 
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-textarea {
-  overflow: auto;
-}
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; 
-  padding: 0; 
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type="search"] {
-  -webkit-appearance: textfield; 
-  outline-offset: -2px; 
-}
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; 
-  font: inherit; 
-}
-
-details {
-  display: block;
-}
-
-summary {
-  display: list-item;
-}
-
-template {
-  display: none;
-}
-
-[hidden] {
-  display: none;
+@media screen and (max-width:720px){
+	.hamburger{
+        display:flex;
+    }
+    nav ul{
+        flex-direction: column;
+        padding: 20px;
+        z-index:999;
+        animation: fadeInAnimation ease 2s;
+		animation-iteration-count: 1;
+		animation-fill-mode: forwards;
+		width:100%;
+    }
+	
+	nav a{color:white;}
+	
+	.side-menu:not(:checked) ~ nav{
+		display:none;
+    }
+    
+    .side-menu:checked ~ nav{
+        display: flex;
+        width: 100%;
+        background: #1c1d22;
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100vh;
+        padding-top:120px;
+    }
+	
 }
